@@ -58,6 +58,10 @@ Trunk (unreleased changes)
 17. HADOOP-1109.  Fix NullPointerException in StreamInputFormat.
     (Koji Noguchi via tomwhite)
 
+18. HADOOP-1117.  Fix DFS scalability: when the namenode is
+    restarted it consumes 80% CPU. (Dhruba Borthakur via
+    tomwhite)
+
 
 Release 0.12.0 - 2007-03-02
 
